force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/Custom_Reverse__c.field-meta.xml
<CustomField>
    <fullName>Custom_Reverse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Reverse</label>
    <type>Checkbox</type>
</CustomField>