force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/LAPro_Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>LAPro_Posted_Date__c</fullName>
    <label>LAPro Posted Date</label>
    <type>DateTime</type>
</CustomField>