force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Balance__c.field-meta.xml
<CustomField>
    <fullName>loan__Balance__c</fullName>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>