force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>loan__Bank_Name__c</fullName>
    <description>Name of the bank to which the check belongs</description>
    <inlineHelpText>Name of the bank to which the check belongs</inlineHelpText>
    <label>Bank Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>