force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Cleared__c.field-meta.xml
<CustomField>
    <fullName>loan__Cleared__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this loan payment transaction is supervised or not.</description>
    <inlineHelpText>Indicates if this loan payment transaction is supervised or not.</inlineHelpText>
    <label>Cleared</label>
    <type>Checkbox</type>
</CustomField>