force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Clearing_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Clearing_Date__c</fullName>
    <label>Clearing Date</label>
    <type>DateTime</type>
</CustomField>