force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Closure_Tolerance_Payment__c.field-meta.xml
<CustomField>
    <fullName>loan__Closure_Tolerance_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this Payment is created for closure Tolerance amount</description>
    <label>Closure Tolerance Payment</label>
    <type>Checkbox</type>
</CustomField>