force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Custom_Logic__c.field-meta.xml
<CustomField>
    <fullName>loan__Custom_Logic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Payment Processing Logic</label>
    <type>Checkbox</type>
</CustomField>