force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Early_Total_Repayment_of_the_Loan__c.field-meta.xml
<CustomField>
    <fullName>loan__Early_Total_Repayment_of_the_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>After a loan is disbursed, a client can at any time repay the loan in a single payment.
he system calculates the total amount due as of the current date, including principal, interest, fees and penalties.</description>
    <inlineHelpText>After a loan is disbursed, a client can at any time repay the loan in a single payment. 
the system calculates the total amount due as of the current date, including principal, interest, fees and penalties.</inlineHelpText>
    <label>Pay-Off</label>
    <type>Checkbox</type>
</CustomField>