force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Excess__c.field-meta.xml
<CustomField>
    <fullName>loan__Excess__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Excess</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>