force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Interest__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Interest component for this payment.</description>
    <inlineHelpText>This is the Interest amount collected for the loan</inlineHelpText>
    <label>Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>