force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__IOA__c.field-meta.xml
<CustomField>
    <fullName>loan__IOA__c</fullName>
    <description>Storing the amount paid against Interest On Arrear for due Principal/Interest/IOA</description>
    <label>IOA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>