force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Ipt_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>loan__Ipt_Snapshot__c</fullName>
    <description>It contains the snapshot of Open Ipt for flexi-Amz loans.</description>
    <inlineHelpText>It contains the snapshot of Open Ipt for flexi-Amz loans.</inlineHelpText>
    <label>Ipt Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>