force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Loan_Payment_Spread__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Payment_Spread__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Payment Spread</label>
    <referenceTo>loan__Loan_Payment_Spread__c</referenceTo>
    <relationshipLabel>Loan Payment Transactions</relationshipLabel>
    <relationshipName>Loan_Payment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>