force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Payment_Application_Mode__c.field-meta.xml
<CustomField>
    <fullName>loan__Payment_Application_Mode__c</fullName>
    <description>If the value is Future Dues, Reserve Amount For Next Due will be used for satisfying Bills. Otherwise, Reserve Amount For Next Due will not be used for satisfying Bills.</description>
    <inlineHelpText>Possible values are 
1) Future Dues 
2) Current Dues 
Future Dues is used when Loan Payments should be used to satisfy future dues. 
Current Dues is used when Loan Payments should only be used to satisfy present dues.</inlineHelpText>
    <label>Payment Application Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Future Dues</fullName>
            </value>
            <value>
                <fullName>Current Dues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>