force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Reschedule_Threshold_Crossed__c.field-meta.xml
<CustomField>
    <fullName>loan__Reschedule_Threshold_Crossed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field will be checked when transaction amount on LPT is higher than reschedule threshold amount and hence LPT will trigger reschedule on loan.</inlineHelpText>
    <label>Reschedule Threshold Crossed</label>
    <type>Checkbox</type>
</CustomField>