force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Skip_Validation__c.field-meta.xml
<CustomField>
    <fullName>loan__Skip_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Validation</label>
    <type>Checkbox</type>
</CustomField>