force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Transaction_Amount__c</fullName>
    <description>Transaction Amount</description>
    <inlineHelpText>This is the sum of Interest, Principal and Fees</inlineHelpText>
    <label>Transaction Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>