force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Transaction_Date__c</fullName>
    <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
    <description>Transaction Date</description>
    <inlineHelpText>Transaction Date</inlineHelpText>
    <label>Transaction Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>