force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Transaction_Time__c.field-meta.xml
<CustomField>
    <fullName>loan__Transaction_Time__c</fullName>
    <label>Transaction Time</label>
    <type>DateTime</type>
</CustomField>