force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__waived__c.field-meta.xml
<CustomField>
    <fullName>loan__waived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this LPT is a waived LPT. If marked as waived the TXN should be used as for loan state change but not for actual cash movement as waived txn are to be ignored for cash movements</description>
    <label>Waived</label>
    <type>Checkbox</type>
</CustomField>