force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan__Write_Off_Recovery_Payment__c.field-meta.xml
<CustomField>
    <fullName>loan__Write_Off_Recovery_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this only if you wish to recover payments for written off loans</inlineHelpText>
    <label>Write Off Recovery Payment</label>
    <type>Checkbox</type>
</CustomField>