force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan_Is_Migrated__c.field-meta.xml
<CustomField>
    <fullName>loan_Is_Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>loan Is Migrated</label>
    <type>Checkbox</type>
</CustomField>