force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/loan_Migrated_Reversal_Date__c.field-meta.xml
<CustomField>
    <fullName>loan_Migrated_Reversal_Date__c</fullName>
    <label>loan Migrated Reversal Date</label>
    <type>Date</type>
</CustomField>