force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/peer__Loan_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>peer__Loan_Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the Loan Payment Transaction is for loan cancellation.</description>
    <inlineHelpText>If true, the Loan Payment Transaction is for loan cancellation.</inlineHelpText>
    <label>Loan Cancellation</label>
    <type>Checkbox</type>
</CustomField>