force-app/main/default/objects/loan__Loan_Payment_Transaction__c/fields/ToBeDeleted__c.field-meta.xml
<CustomField>
    <fullName>ToBeDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checked for the old records</description>
    <label>ToBeDeleted</label>
    <type>Checkbox</type>
</CustomField>