force-app/main/default/objects/loan__Loan_Payment_Transaction__c/validationRules/Cleared_LPT_cannot_be_rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Cleared_LPT_cannot_be_rejected</fullName>
    <active>true</active>
    <description>Cleared payments cannot be rejected.</description>
    <errorConditionFormula>IF(NOT(ISBLANK(loan__Loan_Snapshot__c))&amp;&amp; loan__Rejected__c = true, true,false)</errorConditionFormula>
    <errorMessage>You cannot Reject a Cleared payment, please Reverse the cleared payment instead.</errorMessage>
</ValidationRule>