force-app/main/default/objects/loan__Loan_Payment_Transaction__c/validationRules/loan__Backdated_Payment_date_check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Backdated_Payment_date_check</fullName>
    <active>false</active>
    <description>Backdated payment should not go before contract date.</description>
    <errorConditionFormula>loan__Transaction_Date__c &lt;  loan__Loan_Account__r.loan__Disbursal_Date__c</errorConditionFormula>
    <errorDisplayField>loan__Transaction_Date__c</errorDisplayField>
    <errorMessage>Transaction date should be after contract date.</errorMessage>
</ValidationRule>