force-app/main/default/objects/loan__Loan_Payment_Transaction__c/validationRules/loan__Check_Check_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Check_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>loan__Transaction_Amount__c !=  loan__Check__r.loan__Check_Amount__c</errorConditionFormula>
    <errorMessage>Transaction amount does not match the check amount.</errorMessage>
</ValidationRule>