force-app/main/default/objects/loan__Loan_Payment_Transaction__c/validationRules/loan__Check_Payment_Mode.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Payment_Mode</fullName>
    <active>false</active>
    <errorConditionFormula>loan__Payment_Mode__r.Name  =  &apos;Check&apos; &amp;&amp; ISBLANK( loan__Check__c )</errorConditionFormula>
    <errorMessage>Please input a check.</errorMessage>
</ValidationRule>