force-app/main/default/objects/loan__Loan_Payment_Transaction__c/validationRules/loan__Cheque_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Cheque_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>loan__Payment_Mode__r.Name  = &apos;Cheque&apos;  &amp;&amp;  ISBLANK( loan__Cheque_Number__c )</errorConditionFormula>
    <errorMessage>Cheque Number can&apos;t be blank if payment mode is Cheque.</errorMessage>
</ValidationRule>