force-app/main/default/objects/loan__Loan_Payment_Transaction__c/validationRules/loan__Invalid_State_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Invalid_State_Check</fullName>
    <active>true</active>
    <errorConditionFormula>loan__Loan_Account__r.loan__Invalid_Data__c</errorConditionFormula>
    <errorMessage>Loan is in invalid state via an unexpected event. Please contact Cloud Lending support before posting this payment.</errorMessage>
</ValidationRule>