force-app/main/default/objects/loan__Loan_Payment_Transaction__c/validationRules/loan__Loan_Disbursal_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Loan_Disbursal_Check</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( loan__Loan_Account__r.loan__Disbursal_Date__c ) ||  ISNULL( loan__Loan_Account__r.loan__Disbursal_Date__c )</errorConditionFormula>
    <errorMessage>This loan is not disbursed yet. You cannot record payment transaction.</errorMessage>
</ValidationRule>