force-app/main/default/objects/loan__Loan_Payment_Transaction__c/validationRules/loan__Loan_Status_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Loan_Status_Check</fullName>
    <active>false</active>
    <errorConditionFormula>ISNEW() &amp;&amp; (TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = &apos;Partial Application&apos; || TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = &apos;Pending Approval&apos; || TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = &apos;Canceled&apos; ||
TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = &apos;Closed - Rescheduled&apos; ||
TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = &apos;Disbursed to LO&apos; ||
TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = &apos;Partial Application&apos;)</errorConditionFormula>
    <errorMessage>Invalid Loan Status. You cannot record a repayment transaction for this loan.</errorMessage>
</ValidationRule>