force-app/main/default/objects/loan__Loan_Payment_Transaction__c/validationRules/loan__Manual_Payment_Principal_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Manual_Payment_Principal_Check</fullName>
    <active>false</active>
    <description>This is deprecated and not maintained.</description>
    <errorConditionFormula>ISNEW() &amp;&amp; loan__Manual_Payment__c &amp;&amp;  (ROUND(loan__Principal__c,2) &gt;  ROUND(loan__Loan_Account__r.loan__Principal_Remaining__c,2) )</errorConditionFormula>
    <errorMessage>Principal component cannot be greater than &apos;Remaining Principal&apos;.</errorMessage>
</ValidationRule>