force-app/main/default/objects/loan__Loan_Payment_Transaction__c/validationRules/loan__Not_Write_Off_Recovery_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Not_Write_Off_Recovery_Check</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp;
NOT(TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = &apos;Closed- Written Off&apos;) &amp;&amp;
 loan__Write_Off_Recovery_Payment__c</errorConditionFormula>
    <errorMessage>This is not a written off loan. Please uncheck the &apos;Write off Recovery&apos; option.</errorMessage>
</ValidationRule>