force-app/main/default/objects/loan__Loan_Payment_Transaction__c/validationRules/loan__Stop_Interest_Accrual_Indicator.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Stop_Interest_Accrual_Indicator</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(loan__Loan_Account__r.loan__Product_Type__c, &apos;Loan&apos;)&amp;&amp;  loan__Loan_Account__r.loan__Accrual_Stop_Indicator__c</errorConditionFormula>
    <errorMessage>Daily Interest Accrual is stopped.You cannot make a Payment.</errorMessage>
</ValidationRule>