force-app/main/default/objects/loan__Loan_Payment_Transaction__c/validationRules/loan__Transaction_Amount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Transaction_Amount_Validation</fullName>
    <active>false</active>
    <description>With the addition of &apos;Excess&apos; functionality, this validation is deprecated and not maintained.</description>
    <errorConditionFormula>ISNEW() &amp;&amp; (ROUND(loan__Transaction_Amount__c,2)   &gt;   ROUND(loan__Loan_Account__r.loan__Pay_Off_Amount_As_Of_Today__c,2))</errorConditionFormula>
    <errorDisplayField>loan__Transaction_Amount__c</errorDisplayField>
    <errorMessage>Transaction Amount can not be greater than payoff amount.</errorMessage>
</ValidationRule>