force-app/main/default/objects/loan__Loan_Payment_Transaction__c/validationRules/loan__Transaction_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Transaction_Date_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(loan__Transaction_Date__c &gt;  $User.loan__Current_Branch_s_System_Date__c  ,  NOT(loan__Skip_Validation__c), ISNEW())</errorConditionFormula>
    <errorMessage>Transaction/Receipt date cannot be greater than system date.</errorMessage>
</ValidationRule>