force-app/main/default/objects/loan__Loan_Payment_Transaction__c/validationRules/loan__Write_Off_Recovery_Amount_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Write_Off_Recovery_Amount_Check</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = &apos;Closed- Written Off&apos; &amp;&amp;
( loan__Transaction_Amount__c &gt; loan__Loan_Account__r.loan__Principal_Remaining__c ) &amp;&amp;
ISNEW()</errorConditionFormula>
    <errorMessage>The Recovery Amount is greater than Principal Remaining.</errorMessage>
</ValidationRule>