force-app/main/default/objects/loan__Loan_Payment_Transaction__c/validationRules/loan__Write_Off_Recovery_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Write_Off_Recovery_Check</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp;
TEXT(loan__Loan_Account__r.loan__Loan_Status__c) = &apos;Closed- Written Off&apos; &amp;&amp;
 NOT(loan__Write_Off_Recovery_Payment__c)</errorConditionFormula>
    <errorMessage>This is a written off loan. You will have to select the Write Off Recovery Payment option.</errorMessage>
</ValidationRule>