force-app/main/default/objects/loan__Loan_Payment_Transaction__c/validationRules/loan__Zero_Txn_Amount_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Zero_Txn_Amount_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(loan__Loan_Account__r.loan__Protect_Enabled__c), ROUND(loan__Transaction_Amount__c,2) &lt;= 0,loan__Payment_Mode__r.Name != &apos;WRITE OFF&apos;)</errorConditionFormula>
    <errorMessage>Transaction amount should be greater than zero.</errorMessage>
</ValidationRule>